custom code block themes based on light and dark mode + css fix for toast example

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -89,7 +89,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
               !onIndex && (
                 <>
                   <a
-                    class="text-gray-6 hover:text-foreground focus:text-foreground flex items-center gap-1 py-1 font-mono no-underline"
+                    class="flex items-center gap-1 py-1 font-mono text-gray-6 no-underline hover:text-foreground focus:text-foreground"
                     href="/"
                   >
                     <Icon name="arrow-left" /> back home
@@ -103,7 +103,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
           >
             <label for="theme-toggle">theme:</label>
             <select
-              class="text-gray-11 px-1 font-sans"
+              class="px-1 font-sans text-gray-11"
               name="theme-toggle"
               id="theme-toggle"
             >
