--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -4,7 +4,6 @@ import Comments from "@components/Comments";
 import { formatDate } from "src/lib/utils";
 import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
-import styles from "src/styles/CodeBlock.module.css";
 
 export async function getStaticPaths() {
   const allPosts = await getCollection("posts");
@@ -22,7 +21,6 @@ const { Content } = await post.render();
 ---
 
 <BaseLayout
-  style={styles}
   pageTitle={post.data.title}
   pageSlug={post.slug}
   category="posts"
@@ -69,8 +67,9 @@ const { Content } = await post.render();
 
   #content {
     --tw-prose-links: rgb(var(--primary));
-    --tw-prose-headings: rgb(var(--foreground));
     --tw-prose-code: rgb(var(--primary));
-
+    --tw-prose-headings: rgb(var(--foreground));
+    --tw-prose-quotes: rgb(var(--foreground));
+    --tw-prose-bold: rgb(var(--foreground));
   }
 </style>
