update pagination text size

--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -6,18 +6,18 @@ const { prevUrl, nextUrl } = Astro.props;
 
 <nav
   aria-label="Posts Navigation"
-  class="mx-auto max-w-screen-md mt-8"
+  class="mx-auto mt-8 max-w-screen-md"
   id="pagination"
 >
   {
     prevUrl && (
       <span class="flex">
         <a
-        class="group flex items-center gap-1 py-1 font-mono text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+          class="group flex items-center gap-1 py-1 font-mono text-sm text-gray-6 no-underline hover:text-foreground focus:text-foreground"
           href={prevUrl}
           aria-label="newer posts"
         >
-        <Icon name="arrow-left" />
+          <Icon name="arrow-left" />
           newer posts
         </a>
       </span>
@@ -27,9 +27,10 @@ const { prevUrl, nextUrl } = Astro.props;
     nextUrl && (
       <span class="flex justify-end">
         <a
-        class="group flex items-center gap-1 py-1 font-mono text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+          class="group flex items-center gap-1 py-1 font-mono text-sm text-gray-6 no-underline hover:text-foreground focus:text-foreground"
           href={nextUrl}
-          aria-label="newer posts">
+          aria-label="newer posts"
+        >
           older posts
           <Icon name="arrow-right" />
         </a>
