change colors in light mode for better contrast

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ const buildTime = new Date().toISOString();
     <a
       href="https://github.com/trevortylerlee/trevortylerlee.com/commits/main"
       id="last-updated"
-      class="pb-4 pt-2 text-right font-mono text-sm text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+      class="pb-4 pt-2 text-right font-mono text-sm text-gray-7 no-underline hover:text-foreground focus:text-foreground dark:text-gray-6 dark:hover:text-foreground dark:focus:text-foreground"
     >
       updated
     </a>
