--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -98,7 +98,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
               !onIndex && (
                 <>
                   <a
-                    class="flex items-center gap-1 py-1 font-mono text-sm text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+                    class="flex items-center gap-1 py-1 font-mono text-sm text-gray-7 no-underline hover:text-foreground focus:text-foreground dark:text-gray-6 dark:hover:text-foreground dark:focus:text-foreground"
                     href="/"
                   >
                     <Icon name="arrow-left" /> back home
@@ -108,7 +108,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
             }
           </div>
           <div
-            class="group flex items-center gap-1 py-1 font-mono text-sm opacity-70 focus-within:opacity-100 hover:opacity-100"
+            class="group flex items-center gap-1 py-1 font-mono text-sm opacity-70 hover:opacity-100 focus-visible:opacity-100"
           >
             <label for="theme-toggle">theme:</label>
             <select
