--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,9 @@ const pageTitle = "Trevor Lee | Homepage";
         class="text-3xl font-bold tracking-tighter sm:text-3xl sm:tracking-tight"
       >
         TREVOR TYLER LEE
-        <div class="font-mono text-sm font-normal tracking-normal text-gray-6">
+        <div
+          class="font-mono text-sm font-normal tracking-normal text-gray-7 dark:text-gray-6"
+        >
           @boogerbuttcheeks
         </div>
       </h1>
@@ -45,11 +47,13 @@ const pageTitle = "Trevor Lee | Homepage";
     </div>
   </div>
   <section>
-    <span class="flex justify-between py-2 font-mono text-sm text-gray-6">
+    <span
+      class="flex justify-between py-2 font-mono text-sm text-gray-7 dark:text-gray-6"
+    >
       <h2 class="">latest posts</h2>
       <a
         href="/rss.xml"
-        class="group flex items-center gap-1 py-1 text-sm text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+        class="group flex items-center gap-1 py-1 text-sm text-gray-7 no-underline hover:text-foreground focus:text-foreground dark:text-gray-6 dark:hover:text-foreground dark:focus:text-foreground"
         ><Icon
           name="radio"
           class="group-hover:text-primary group-focus:text-primary"
@@ -71,13 +75,15 @@ const pageTitle = "Trevor Lee | Homepage";
     <div class="flex justify-end pb-8 pt-2">
       <a
         href="/posts"
-        class="group flex items-center gap-1 py-1 font-mono text-sm text-gray-6 no-underline hover:text-foreground focus:text-foreground"
+        class="group flex items-center gap-1 py-1 font-mono text-sm text-gray-7 no-underline hover:text-foreground focus:text-foreground dark:text-gray-6 dark:hover:text-foreground dark:focus:text-foreground"
         >view older posts <Icon name="arrow-right" /></a
       >
     </div>
   </section>
   <section>
-    <h2 class="pb-5 pt-2 font-mono text-sm text-gray-6">projects</h2>
+    <h2 class="pb-5 pt-2 font-mono text-sm text-gray-7 dark:text-gray-6">
+      projects
+    </h2>
     <ul class="grid gap-3 sm:grid-cols-2 sm:gap-6">
       <Project
         description="Site to instantly preview drop-in CSS themes."
