--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,19 @@
     --gray-10: 44 44 46;
     --gray-11: 28 28 30;
 
+    --red: 255 59 48;
+    --orange: 255 149 0;
+    --yellow: 255 204 0;
+    --green: 40 205 65;
+    --mint: 0 199 190;
+    --teal: 89 173 196;
+    --cyan: 85 190 240;
+    --blue: 0 122 255;
+    --indigo: 88 86 214;
+    --purple: 175 82 222;
+    --pink: 255 45 85;
+    --brown: 162 132 94;
+
     --primary: 66 97 209;
     --secondary: 152 0 255;
     --highlight: 0 0 255;
@@ -37,6 +50,19 @@
   }
 
   .dark {
+    --red: 255 69 58;
+    --orange: 255 159 10;
+    --yellow: 255 214 10;
+    --green: 50 215 75;
+    --mint: 102 212 207;
+    --teal: 106 196 220;
+    --cyan: 90 200 245;
+    --blue: 10 132 255;
+    --indigo: 94 92 230;
+    --purple: 191 90 242;
+    --pink: 255 55 95;
+    --brown: 172 142 104;
+
     --primary: 188 145 62;
     --secondary: 237 208 84;
     --highlight: 188 145 62;
