change primary to orange, make Posts and Projects links foreground

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -5,7 +5,7 @@ const { date, href, title, description, last } = Astro.props;
 
 <li class="-mx-3">
   <a
-    class="text-accent group flex items-center justify-between gap-2 rounded-2xl p-3 no-underline ring-inset ring-foreground/10 hover:bg-gray-2 hover:ring-1 focus:bg-gray-2 dark:hover:bg-gray-10 dark:focus:bg-gray-10 sm:gap-3"
+    class="group flex items-center justify-between gap-2 rounded-2xl p-3 text-foreground no-underline ring-inset ring-foreground/10 hover:bg-gray-2 hover:ring-1 focus:bg-gray-2 dark:hover:bg-gray-10 dark:focus:bg-gray-10 sm:gap-3"
     href={`/posts/${href}`}
   >
     <span>{title}</span>
