--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -7,7 +7,7 @@ const { href, title, description, src, online } = Astro.props;
 
 <li class="relative">
   <a
-    class="group block h-full w-full overflow-hidden rounded-2xl ring-2 ring-foreground/10 hover:bg-gray-2 focus:bg-gray-2 dark:hover:bg-gray-10 dark:focus:bg-gray-10"
+    class="group block h-full w-full overflow-hidden rounded-2xl ring-2 ring-foreground/10"
     href={href}
     ><span class="-mb-3 block h-[12em] w-full overflow-hidden rounded-t-xl p-2"
       ><Image
@@ -20,8 +20,10 @@ const { href, title, description, src, online } = Astro.props;
         quality={"low"}
         format="avif"
       /></span
-    ><h3 class="block px-3.5 pt-4 font-bold uppercase">{title}</h3><p
-      class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-gray-7 group-hover:text-foreground group-focus:text-foreground dark:text-gray-6"
+    ><h3 class="block px-3.5 pt-4 text-lg font-bold text-foreground">
+      {title}
+    </h3><p
+      class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-gray-7 dark:text-gray-6"
     >
       {description}
     </p><span class="block pb-4">
@@ -29,14 +31,14 @@ const { href, title, description, src, online } = Astro.props;
         online ? (
           <div class="absolute bottom-3 right-5 flex items-center gap-1">
             <div class="h-[8px] w-[8px] rounded-full bg-green-500" />
-            <span class="font-mono text-xs text-gray-7 group-hover:text-foreground group-focus:text-foreground dark:text-gray-6">
+            <span class="font-mono text-xs text-gray-7 dark:text-gray-6">
               online
             </span>
           </div>
         ) : (
           <div class="absolute bottom-3 right-5 flex items-center gap-1 text-red-500 ">
             <div class="h-[8px] w-[8px] rounded-full bg-red-500" />
-            <span class="font-mono text-xs text-gray-7 group-hover:text-foreground group-focus:text-foreground dark:text-gray-6">
+            <span class="font-mono text-xs text-gray-7 dark:text-gray-6">
               offline
             </span>
           </div>
