change link colors

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,11 @@ const buildTime = new Date().toISOString();
   <details
     class="w-full cursor-default rounded-xl px-2 py-2 ring-2 ring-foreground/10"
   >
-    <summary class="cursor-pointer">Contact (click for details)</summary>
+    <summary class="cursor-pointer"
+      >Contact <span class="text-gray-7 dark:text-gray-6"
+        >(click for details)</span
+      ></summary
+    >
     <span class="flex flex-col py-2">
       <span class="cursor-text">trevortylerlee@gmail.com</span>
       <a href="https://github.com/trevortylerlee" class="">Github</a>
