--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -7,7 +7,7 @@ const { href, title, description, src, online } = Astro.props;
 
 <li class="relative">
   <a
-    class="group block h-full w-full overflow-hidden rounded-2xl ring-2 ring-foreground/10"
+    class="group block h-full w-full overflow-hidden rounded-2xl text-foreground ring-2 ring-foreground/10 hover:bg-gray-2 hover:ring-foreground/30 focus-visible:bg-gray-2 focus-visible:ring-foreground/50 dark:hover:bg-gray-10 dark:focus-visible:bg-gray-10"
     href={href}
     ><span class="-mb-3 block h-[12em] w-full overflow-hidden rounded-t-xl p-2"
       ><Image
@@ -20,7 +20,7 @@ const { href, title, description, src, online } = Astro.props;
         quality={"low"}
         format="avif"
       /></span
-    ><h3 class="block px-3.5 pt-4 text-lg font-bold text-foreground">
+    ><h3 class="block px-3.5 pt-4 text-lg font-bold">
       {title}
     </h3><p
       class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-gray-7 dark:text-gray-6"
