--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,9 +95,8 @@ const pageTitle = "Trevor Lee | Homepage";
       <Project
         description="Tired of typing out arrays? Me too..."
         href="https://text2array.vercel.com"
-        title="text 2 array"
+        title="Text 2 Array"
         src={t2a}
-        online
       />
       <Project
         description="Protect your friends and family from phishing attacks by phishing them yourself."
