--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -10,7 +10,7 @@ const { href, title, description, src, online } = Astro.props;
     class="group block h-full w-full overflow-hidden rounded-2xl text-foreground ring-2 ring-foreground/10 hover:bg-gray-2 hover:ring-foreground/30 focus-visible:bg-gray-2 focus-visible:ring-foreground/50 dark:hover:bg-gray-10 dark:focus-visible:bg-gray-10"
     href={href}
     ><span class="-mb-3 block h-[12em] w-full overflow-hidden rounded-t-xl p-2"
-      ><div class="overflow-hidden rounded-2xl">
+      ><div class="overflow-hidden rounded-t-2xl">
         <Image
           alt={title}
           width="640"
