--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const buildTime = new Date().toISOString();
     class="w-full cursor-default rounded-xl px-2 py-2 ring-2 ring-foreground/10"
   >
     <summary class="cursor-pointer"
-      >Contact <span class="text-gray-7 dark:text-gray-6"
+      >Contact <span class="font-mono text-sm text-gray-7 dark:text-gray-6"
         >(click for details)</span
       ></summary
     >
