fix t2a link, turn online

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,9 +94,10 @@ const pageTitle = "Trevor Lee | Homepage";
       />
       <Project
         description="Tired of typing out arrays? Me too..."
-        href="https://text2array.vercel.com"
+        href="https://text2array.vercel.app/"
         title="Text 2 Array"
         src={t2a}
+        online
       />
       <Project
         description="Protect your friends and family from phishing attacks by phishing them yourself."
