--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -7,7 +7,7 @@ const { href, title, description, src, online } = Astro.props;
 
 <li class="relative">
   <a
-    class="group block h-full w-full overflow-hidden rounded-2xl text-foreground ring-2 ring-foreground/10 hover:bg-gray-2 hover:ring-foreground/30 focus-visible:bg-gray-2 focus-visible:ring-foreground/50 dark:hover:bg-gray-10 dark:focus-visible:bg-gray-10"
+    class="group block h-full w-full overflow-hidden rounded-2xl text-gray-10 ring-2 ring-gray-10/10 hover:bg-gray-1 hover:ring-gray-10/30 focus-visible:bg-gray-1 focus-visible:ring-gray-10/50"
     href={href}
     ><span class="-mb-3 block h-[12em] w-full overflow-hidden rounded-t-xl p-2"
       ><div class="overflow-hidden rounded-t-2xl">
@@ -25,24 +25,20 @@ const { href, title, description, src, online } = Astro.props;
     ><h3 class="block px-3.5 pt-5 text-lg font-bold">
       {title}
     </h3><p
-      class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-gray-7 dark:text-gray-6"
+      class="mt-1 block border-b-transparent px-3.5 pb-5 pr-4 text-gray-9"
     >
       {description}
     </p><span class="block pb-4">
       {
         online ? (
           <div class="absolute bottom-3 right-5 flex items-center gap-1">
-            <div class="h-[8px] w-[8px] rounded-full bg-green-500" />
-            <span class="font-mono text-xs text-gray-7 dark:text-gray-6">
-              online
-            </span>
+            <div class="bg-green-7 h-[8px] w-[8px] rounded-full" />
+            <span class="font-mono text-xs text-gray-9">online</span>
           </div>
         ) : (
-          <div class="absolute bottom-3 right-5 flex items-center gap-1 text-red-500 ">
-            <div class="h-[8px] w-[8px] rounded-full bg-red-500" />
-            <span class="font-mono text-xs text-gray-7 dark:text-gray-6">
-              offline
-            </span>
+          <div class="absolute bottom-3 right-5 flex items-center gap-1">
+            <div class="bg-red-7 h-[8px] w-[8px] rounded-full" />
+            <span class="font-mono text-xs text-gray-9">offline</span>
           </div>
         )
       }
