--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -89,7 +89,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
   </head>
   <body>
     <div
-      class=`bg-background text-gray-11 dark:bg-black dark:text-gray-1 m-auto ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
+      class=`bg-background text-gray-10 dark:bg-black m-auto ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
     >
       <nav class="w-full py-4">
         <div class="flex items-center justify-between">
@@ -98,7 +98,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
               !onIndex && (
                 <>
                   <a
-                    class="flex items-center gap-1 py-1 font-mono text-sm text-gray-7 no-underline hover:text-foreground focus:text-foreground dark:text-gray-6 dark:hover:text-foreground dark:focus:text-foreground"
+                    class="flex items-center gap-1 py-1 font-mono text-sm text-gray-9 no-underline hover:text-gray-10 focus-visible:text-gray-10"
                     href="/"
                   >
                     <Icon name="arrow-left" /> back home
@@ -107,12 +107,10 @@ if (pageTitle === "Trevor Lee | Homepage") {
               )
             }
           </div>
-          <div
-            class="group flex items-center gap-1 py-1 font-mono text-sm opacity-70 hover:opacity-100 focus-visible:opacity-100"
-          >
+          <div class="group flex items-center gap-1 py-1 font-mono text-sm">
             <label for="theme-toggle">theme:</label>
             <select
-              class="px-1 font-sans text-gray-11"
+              class="px-1 font-sans text-black"
               name="theme-toggle"
               id="theme-toggle"
             >
