--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,70 +4,204 @@
 
 @layer base {
   :root {
-    --gray-1: 242 242 247;
-    --gray-2: 229 229 234;
-    --gray-3: 209 209 214;
-    --gray-4: 199 199 204;
-    --gray-5: 174 174 178;
-    --gray-6: 142 142 147;
-    --gray-7: 99 99 102;
-    --gray-8: 72 72 74;
-    --gray-9: 58 58 60;
-    --gray-10: 44 44 46;
-    --gray-11: 28 28 30;
+    --gray-1: 300deg 0% 94.902%;
+    --gray-2: 330deg 0% 92.157%;
+    --gray-3: 300deg 0% 90.196%;
+    --gray-4: 0deg 0% 84.314%;
+    --gray-5: 180deg 0% 78.824%;
+    --gray-6: 0deg 0% 65.882%;
+    --gray-7: 240deg 0% 56.078%;
+    --gray-8: 300deg 0% 49.02%;
+    --gray-9: 240deg 0% 40%;
+    --gray-10: 330deg 0% 9.0196%;
 
-    --red: 255 59 48;
-    --orange: 255 149 0;
-    --yellow: 255 204 0;
-    --green: 40 205 65;
-    --mint: 0 199 190;
-    --teal: 89 173 196;
-    --cyan: 85 190 240;
-    --blue: 0 122 255;
-    --indigo: 88 86 214;
-    --purple: 175 82 222;
-    --pink: 255 45 85;
-    --brown: 162 132 94;
+    --blue-1: 210.19deg 100% 96.938%;
+    --blue-2: 208.03deg 96.714% 95.901%;
+    --blue-3: 206.82deg 93.513% 93.62%;
+    --blue-4: 208.69deg 98.376% 89.926%;
+    --blue-5: 209.65deg 99.862% 80.341%;
+    --blue-6: 207.85deg 100% 65.859%;
+    --blue-7: 212.32deg 99.054% 48.364%;
+    --blue-8: 211.98deg 100% 40.93%;
+    --blue-9: 211.85deg 96.847% 42.786%;
+    --blue-10: 210.87deg 100% 15.126%;
+
+    --red-1: 6.8306deg 87.798% 96.604%;
+    --red-2: 357.97deg 89.345% 95.678%;
+    --red-3: 0.4734deg 100% 95.158%;
+    --red-4: 1.403deg 90.534% 91.865%;
+    --red-5: 0.8253deg 79.64% 84.515%;
+    --red-6: 359.19deg 88.969% 70.874%;
+    --red-7: 358.19deg 75.541% 59.201%;
+    --red-8: 357.61deg 70.229% 52.03%;
+    --red-9: 358.26deg 65.68% 47.953%;
+    --red-10: 356.62deg 47.226% 15.126%;
+
+    --yellow-1: 40.955deg 100% 95.073%;
+    --yellow-2: 45.522deg 100% 91.972%;
+    --yellow-3: 42.824deg 99.413% 89.85%;
+    --yellow-4: 41.999deg 93.489% 76.733%;
+    --yellow-5: 38.147deg 99.472% 70.939%;
+    --yellow-6: 35.894deg 89.902% 62.336%;
+    --yellow-7: 38.53deg 100% 56.961%;
+    --yellow-8: 35.498deg 100% 51.252%;
+    --yellow-9: 29.802deg 98.184% 32.183%;
+    --yellow-10: 19.679deg 77.395% 17.186%;
+
+    --green-1: 137.2deg 59.788% 95.814%;
+    --green-2: 127.34deg 60.219% 94.976%;
+    --green-3: 117.84deg 58.799% 91.016%;
+    --green-4: 120.26deg 60.504% 86.466%;
+    --green-5: 124.96deg 61.028% 74.721%;
+    --green-6: 124.56deg 59.498% 63.98%;
+    --green-7: 130.08deg 39.997% 46.182%;
+    --green-8: 131.76deg 42.385% 39.223%;
+    --green-9: 130.66deg 47.802% 32.395%;
+    --green-10: 126.6deg 30.315% 14.771%;
+
+    --cyan-1: 172.9deg 58.224% 95.802%;
+    --cyan-2: 168.42deg 66.148% 94.054%;
+    --cyan-3: 167.94deg 74.679% 90.049%;
+    --cyan-4: 170.01deg 71.575% 85.008%;
+    --cyan-5: 170.14deg 70.899% 72.248%;
+    --cyan-6: 169.52deg 70.119% 57.115%;
+    --cyan-7: 172.67deg 77.43% 36.336%;
+    --cyan-8: 172.28deg 81.184% 30.294%;
+    --cyan-9: 173.47deg 91.512% 24.9%;
+    --cyan-10: 171.44deg 78.506% 13.042%;
+
+    --purple-1: 275.76deg 95.239% 97.26%;
+    --purple-2: 282.27deg 69.415% 96.855%;
+    --purple-3: 277.67deg 69.85% 94.702%;
+    --purple-4: 275.75deg 71.987% 92.147%;
+    --purple-5: 274.04deg 70.515% 82.432%;
+    --purple-6: 272.56deg 72.174% 73.137%;
+    --purple-7: 272.25deg 52.354% 54.108%;
+    --purple-8: 271.47deg 46.649% 45.382%;
+    --purple-9: 273.85deg 70.552% 43.351%;
+    --purple-10: 275.16deg 100% 15.254%;
+
+    --pink-1: 325.51deg 99.799% 96.047%;
+    --pink-2: 340.49deg 97.232% 96.234%;
+    --pink-3: 334.38deg 78.686% 93.78%;
+    --pink-4: 340.31deg 72.73% 90.972%;
+    --pink-5: 339.98deg 72.513% 83.999%;
+    --pink-6: 341.77deg 74.927% 73.098%;
+    --pink-7: 335.99deg 81.711% 58.327%;
+    --pink-8: 335.46deg 74.637% 51.008%;
+    --pink-9: 335.32deg 64.983% 44.893%;
+    --pink-10: 334.53deg 70.181% 15.445%;
 
     --primary: 50 100 205;
     --secondary: 152 0 255;
     --highlight: 0 0 255;
-    --background: var(--gray-1);
-    --foreground: var(--gray-11);
 
     /* shiki config */
-    --astro-code-color-text: #313131;
-    --astro-code-color-background: #ffffff;
-    --astro-code-token-constant: #ff7e00;
-    --astro-code-token-string: #0ba463;
-    --astro-code-token-comment: #a8a8a8;
-    --astro-code-token-keyword: #e1239a;
-    --astro-code-token-parameter: #0488db;
-    --astro-code-token-function: #ff7e00;
-    --astro-code-token-string-expression: #0ba463;
-    --astro-code-token-punctuation: #5d5d5d;
-    --astro-code-token-link: #e1239a;
+    --astro-code-color-text: hsl(var(--gray-10));
+    --astro-code-color-background: hsl(var(--gray-2));
+    --astro-code-token-constant: hsl(var(--orange-7));
+    --astro-code-token-string: hsl(var(--green-7));
+    --astro-code-token-comment: hsl(var(--gray-6));
+    --astro-code-token-keyword: hsl(var(--pink-7));
+    --astro-code-token-parameter: hsl(var(--blue-7));
+    --astro-code-token-function: hsl(var(--yellow-8));
+    --astro-code-token-string-expression: hsl(var(--green-7));
+    --astro-code-token-punctuation: hsl(var(--gray-5));
+    --astro-code-token-link: hsl(var(--pink-7));
   }
 
   .dark {
-    --red: 255 69 58;
-    --orange: 255 159 10;
-    --yellow: 255 214 10;
-    --green: 50 215 75;
-    --mint: 102 212 207;
-    --teal: 106 196 220;
-    --cyan: 90 200 245;
-    --blue: 10 132 255;
-    --indigo: 94 92 230;
-    --purple: 191 90 242;
-    --pink: 255 55 95;
-    --brown: 172 142 104;
+    --gray-1: 210deg 0% 10%;
+    --gray-2: 300deg 0% 12%;
+    --gray-3: 180deg 0% 16%;
+    --gray-4: 300deg 0% 18%;
+    --gray-5: 240deg 0% 27%;
+    --gray-6: 0deg 0% 52%;
+    --gray-7: 240deg 0% 56%;
+    --gray-8: 300deg 0% 49%;
+    --gray-9: 0deg 0% 63%;
+    --gray-10: 0deg 0% 92%;
+
+    --blue-1: 212.39deg 51.896% 11.849%;
+    --blue-2: 214.97deg 59.165% 15.102%;
+    --blue-3: 213.11deg 69.471% 20.099%;
+    --blue-4: 211.47deg 77.59% 23.017%;
+    --blue-5: 211.95deg 81.737% 27.792%;
+    --blue-6: 205.88deg 100% 49.948%;
+    --blue-7: 212.51deg 98.698% 48.654%;
+    --blue-8: 212.2deg 98.594% 41.207%;
+    --blue-9: 210.64deg 100% 66.49%;
+    --blue-10: 206.15deg 95.963% 96.082%;
+
+    --red-10: 357.99deg 85.08% 96.027%;
+    --red-9: 358.27deg 99.187% 68.912%;
+    --red-8: 358.19deg 75.541% 59.201%;
+    --red-7: 357.61deg 70.229% 52.03%;
+    --red-6: 358.09deg 64.397% 42.18%;
+    --red-5: 358.09deg 59.397% 32.18%;
+    --red-4: 354.84deg 54.352% 22.073%;
+    --red-3: 354.83deg 47.982% 15.903%;
+    --red-2: 354.83deg 40.982% 12.903%;
+    --red-1: 354.33deg 35.707% 10.99%;
+
+    --yellow-1: 35.03deg 100% 8.1751%;
+    --yellow-2: 31.949deg 99.78% 9.9478%;
+    --yellow-3: 32.389deg 100% 15.024%;
+    --yellow-4: 34.655deg 99.229% 17.156%;
+    --yellow-5: 35.586deg 94.083% 21.794%;
+    --yellow-6: 37.58deg 90.804% 32.953%;
+    --yellow-7: 37.883deg 87.424% 48.027%;
+    --yellow-8: 38.53deg 100% 56.961%;
+    --yellow-9: 35.498deg 100% 51.252%;
+    --yellow-10: 39.016deg 97.095% 93.337%;
+
+    --green-1: 139.7deg 50.059% 8.5979%;
+    --green-2: 135.58deg 47.45% 12.021%;
+    --green-3: 133.49deg 50.607% 14.183%;
+    --green-4: 136.05deg 71.939% 15.74%;
+    --green-5: 134.5deg 69.316% 23.117%;
+    --green-6: 134.61deg 70.693% 33.783%;
+    --green-7: 130.08deg 39.997% 46.182%;
+    --green-8: 131.76deg 42.385% 39.223%;
+    --green-9: 131.98deg 42.965% 56.729%;
+    --green-10: 130.36deg 74.397% 94.238%;
+
+    --cyan-10: 165.86deg 73.159% 92.915%;
+    --cyan-9: 173.68deg 92.972% 40.463%;
+    --cyan-8: 172.28deg 81.184% 30.294%;
+    --cyan-7: 172.67deg 77.43% 36.336%;
+    --cyan-6: 171.4deg 82.133% 32.562%;
+    --cyan-5: 172.57deg 76.395% 20.903%;
+    --cyan-4: 170.84deg 84.114% 13.087%;
+    --cyan-3: 171.49deg 81.686% 12.596%;
+    --cyan-2: 171.5deg 79.558% 8.7319%;
+    --cyan-1: 167.49deg 78.082% 7.2386%;
+
+    --purple-1: 284.84deg 31.579% 11.846%;
+    --purple-2: 281.43deg 37.961% 15.67%;
+    --purple-3: 280.53deg 43.568% 22.885%;
+    --purple-4: 275.83deg 44.973% 28.479%;
+    --purple-5: 274.73deg 48.661% 35.069%;
+    --purple-6: 272.25deg 52.354% 54.108%;
+    --purple-7: 271.47deg 46.649% 45.382%;
+    --purple-8: 272.13deg 66.246% 50.312%;
+    --purple-9: 274.86deg 70.073% 71.276%;
+    --purple-10: 283.25deg 68.715% 95.868%;
+
+    --pink-10: 329.96deg 76.01% 95.792%;
+    --pink-9: 335.33deg 84.412% 82.176%;
+    --pink-8: 341.33deg 91.742% 67.366%;
+    --pink-7: 335.46deg 74.637% 51.008%;
+    --pink-6: 336.38deg 74.76% 40.52%;
+    --pink-5: 335.48deg 57.339% 27.292%;
+    --pink-4: 333.33deg 52.401% 21.815%;
+    --pink-3: 335.05deg 50.355% 20.698%;
+    --pink-2: 333.88deg 42.559% 15.888%;
+    --pink-1: 332.58deg 29.836% 12.16%;
 
     --primary: 60 110 210;
     --secondary: 237 208 84;
     --highlight: 188 145 62;
-    --background: var(--gray-11);
-    --foreground: var(--gray-1);
 
     /* shiki config */
     --astro-code-color-text: #e0e0e0;
@@ -86,6 +220,6 @@
 
 @layer utilities {
   a {
-    color: rgb(var(--primary));
+    color: hsl(var(--blue-6));
   }
 }
