--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import { Icon } from "astro-icon/components";
 import profilePicture from "@assets/me-with-roxy.webp";
 import classlessCSS from "@assets/posts/classlesscss.png";
-import t2a from "@assets/posts/t2a.png";
+import t2a from "@assets/posts/t2a.jpg";
 import phished from "@assets/posts/phished.png";
 import BaseLayout from "src/layouts/BaseLayout.astro";
 import { formatBlogPost } from "src/lib/utils";
