--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const pageTitle = "Trevor Lee | Homepage";
       >
         TREVOR TYLER LEE
         <div class="font-mono text-sm font-normal tracking-normal text-gray-9">
-          @boogerbuttcheeks
+          @trevortylerlee
         </div>
       </h1>
     </div>
