--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -9,7 +9,7 @@ const { type = "button", variant, ...rest } = Astro.props;
 <style define:vars={{ variant }}>
   button {
     border-radius: 0.125rem;
-    border: 1px solid #767676;
+    border: 1px solid hsl(var(--gray-10));
     background-color: #efefef;
     padding: 1px 6px 1px 6px;
     color: black;
@@ -22,7 +22,7 @@ const { type = "button", variant, ...rest } = Astro.props;
   }
 
   button:active {
-    background-color: #d9d9d9;
+    background-color: #c1c1c1;
   }
 
   .destructive {
