--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,10 +32,12 @@ const pageTitle = "Trevor Lee | Homepage";
         loading="eager"
       />
       <h1
-        class="text-3xl font-bold tracking-tighter sm:text-3xl sm:tracking-tight"
+        class="text-3xl font-bold uppercase tracking-tighter sm:text-3xl sm:tracking-tight"
       >
-        TREVOR TYLER LEE
-        <div class="font-mono text-sm font-normal tracking-normal text-gray-9">
+        Trevor Tyler Lee
+        <div
+          class="font-mono text-sm font-normal lowercase tracking-normal text-gray-9"
+        >
           @trevortylerlee
         </div>
       </h1>
