footer styles, change text in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,19 +14,18 @@ const buildTime = new Date().toISOString();
       ></summary
     >
     <span class="flex flex-col py-2">
-      <span class="cursor-text">trevortylerlee@gmail.com</span>
-      <a href="https://github.com/trevortylerlee" class="">Github</a>
-      <a href="https://www.linkedin.com/in/trevortylerlee/" class="pb-6"
-        >LinkedIn</a
-      >
+      <!-- SAVE THIS FILE WITHOUT FORMATTING OR PRETTIER FUCKS UP LINKS -->
+      <span>Email: <a href="mailto:trevortylerlee@gmail.com">trevortylerlee@gmail.com</a></span>
+      <span>Github: <a href="https://github.com/trevortylerlee" class="">@trevortylerlee</a></span>
+      <span>LinkedIn: <a href="https://www.linkedin.com/in/trevortylerlee/" class="pb-6">@trevortylerlee</a></span>
       <div class="absolute bottom-3 right-3 flex gap-0.5">
-        <div class="bg-blue-5 h-2 w-2"></div>
-        <div class="bg-red-5 h-2 w-2"></div>
-        <div class="bg-yellow-5 h-2 w-2"></div>
-        <div class="bg-green-5 h-2 w-2"></div>
-        <div class="bg-cyan-5 h-2 w-2"></div>
-        <div class="bg-purple-5 h-2 w-2"></div>
-        <div class="bg-pink-5 h-2 w-2"></div>
+        <div class="h-2 w-2 bg-blue-5"></div>
+        <div class="h-2 w-2 bg-red-5"></div>
+        <div class="h-2 w-2 bg-yellow-5"></div>
+        <div class="h-2 w-2 bg-green-5"></div>
+        <div class="h-2 w-2 bg-cyan-5"></div>
+        <div class="h-2 w-2 bg-purple-5"></div>
+        <div class="h-2 w-2 bg-pink-5"></div>
       </div>
     </span>
   </details>
