--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -108,7 +108,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
             }
           </div>
           <div class="group flex items-center gap-1 py-1 font-mono text-sm">
-            <label for="theme-toggle">theme:</label>
+            <label class="text-gray-9" for="theme-toggle">theme:</label>
             <select
               class="px-1 font-sans text-black"
               name="theme-toggle"
