--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -89,7 +89,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
   </head>
   <body>
     <div
-      class=`bg-background text-gray-10 dark:bg-black m-auto ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
+      class=`bg-background text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
     >
       <nav class="w-full py-4">
         <div class="flex items-center justify-between">
@@ -98,7 +98,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
               !onIndex && (
                 <>
                   <a
-                    class="flex items-center gap-1 py-1 font-mono text-sm text-gray-9 no-underline hover:text-gray-10 focus-visible:text-gray-10"
+                    class="link flex items-center gap-1 py-1 font-mono text-sm no-underline"
                     href="/"
                   >
                     <Icon name="arrow-left" /> back home
